compiler/crates/types/tests/typeerr/return_wrong_type.th
สูตร f() -> จำนวนเต็ม {
    ส่งกลับ "oops";
}
